# FastAPI-Web-App

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: cc0dd1adce1e_initial_schema.py
templates/: home.html  layout.html  post.html  user_posts.html
